# sacrifice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  main.c
src/: defs.h  game_context.h  main.c  world.h
src/debug/: cimgui_include.h  debug.c  debug.h  debug_data.c  debug_data.h  debug_entities.c  debug_entities.h  debug_entity.c  debug_entity.h  imgui_wrapper.cpp  imgui_wrapper.h  main_ui.cpp  main_ui.h
src/debug/entity/: debug_entities.c  debug_entity.c  debug_position.c  debug_position.h
src/ecs/: ecs.c  ecs.h  entity_manager.c  entity_manager.h  tag_component.c  tag_component.h
src/ecs/ai/: chase_behaviour_component.c  chase_behaviour_component.h  chase_behaviour_system.c  chase_behaviour_system.h
src/ecs/combat/: combat_system.c  combat_system.h  harm_component.c  harm_component.h  health_component.c  health_component.h
src/ecs/physics/: collider_component.c  collider_component.h  collision_system.c  collision_system.h  map_bounds_system.c  map_bounds_system.h  movement_system.c  movement_system.h  position_component.c  position_component.h  velocity_component.c  velocity_component.h
src/ecs/render/: render_system.c  render_system.h  sprite_component.c  sprite_component.h
src/input/: input.c  input.h
src/io/: texture_io.c  texture_io.h
tests/: CMakeLists.txt  test_entity_manager.c  test_main.c  test_movement_system.c
